# video2csv

./: .gitignore  CLAUDE.md  README.md  config.json  pyproject.toml  requirements.txt
configs/: config_20260304.json
docs/: implementation_plan.md
src/video2csv/: __main__.py  cli.py  config.py  dump_frames.py  extract.py  models.py  pipeline.py  preprocess.py  quality_check.py  video.py  writer.py
src/video2csv/ocr/: __init__.py  base.py  factory.py  paddleocr_engine.py  paddleocr_mobile_engine.py  paddleocr_rec_engine.py
tests/: conftest.py  test_config.py  test_extract.py  test_ocr.py  test_pipeline.py  test_preprocess.py  test_video.py  test_writer.py
